changed charity take over text

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -111,7 +111,7 @@
         <div id="takeover-block">
             <div class="charity-logo"><a href="http://teezilla.myshopify.com/pages/charity-take-over-how-it-works"><img src="{{asset_url}}/images/whizzkidz-logo.png" alt="Temwa logo" /></a></div>
             <h1>TeeZilla Charity Take Over</h1>
-            <p><a href="http://teezilla.myshopify.com/pages/charity-take-over-how-it-works">September is another Charity Take Over month - and there's a <strong>THEME!</strong></a></p>
+            <p><a href="http://teezilla.myshopify.com/pages/charity-take-over-how-it-works">September is another Charity Take Over month - and there's a <strong>THEME!</strong>. Click here to find out more.</a></p>
         </div>
 
     </div><!-- #header_content end -->
