--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -69,11 +69,11 @@
     
       <div id="support-topbar">
         <ul>
-          <li class="about"><a href="http://teezilla.myshopify.com/pages/about-teezilla" title="link to TeeZilla about page">About TeeZilla</a></li>
-          <li><a href="http://teezilla.myshopify.com/" title="link to TeeZilla shop">Buy the Tees</a></li>
+          <li class="about"><a href="http://teezilla.co.uk/pages/about-teezilla" title="link to TeeZilla about page">About TeeZilla</a></li>
+          <li><a href="http://teezilla.co.uk/" title="link to TeeZilla shop">Buy the Tees</a></li>
           <li><a href="http://www.facebook.com/pages/TeeZilla/269323539774090" title="link to TeeZilla on Facebook">TeeZilla on Facebook</a></li>
           <li><a href="http://teezilla.rusic.com/teezilla-support" title="link to TeeZilla support community">Support &amp; FAQs</a></li>
-          <li><a href="http://teezilla.myshopify.com/pages/terms-conditions" title="link toTeeZilla terms & conditions">Terms &amp; conditions</a></li>
+          <li><a href="http://teezilla.co.uk/pages/terms-conditions" title="link toTeeZilla terms & conditions">Terms &amp; conditions</a></li>
         </ul>
       </div>
     
@@ -89,7 +89,7 @@
 
       <ul id="main_nav">
         <li><a href="{{space.permalink}}" title="link to TeeZilla voting">Vote<span>Rate your favourite shirt</span></a></li>
-        <li><a href="http://teezilla.myshopify.com/" title="link to TeeZilla shop">Shop<span>Buy Winning Tees</span></a></li>
+        <li><a href="http://teezilla.co.uk/" title="link to TeeZilla shop">Shop<span>Buy Winning Tees</span></a></li>
         <li class="last red_nav">
           {% if current_user %}
             <a href="/ideas/new" title="add a new entry" class="simple_login">
@@ -109,9 +109,9 @@
       <div id="main_arrow"><!-- IE Fix --></div>
 
         <div id="takeover-block">
-            <div class="charity-logo"><a href="http://teezilla.myshopify.com/pages/charity-take-over-how-it-works"><img src="{{asset_url}}/images/whizzkidz-logo.png" alt="Temwa logo" /></a></div>
+            <div class="charity-logo"><a href="http://teezilla.co.uk/pages/charity-take-over-how-it-works"><img src="{{asset_url}}/images/whizzkidz-logo.png" alt="Temwa logo" /></a></div>
             <h1>TeeZilla Charity Take Over</h1>
-            <p><a href="http://teezilla.myshopify.com/pages/charity-take-over-how-it-works">September is another Charity Take Over month - and there's a <strong>THEME!</strong> Click here to find out more.</a></p>
+            <p><a href="http://teezilla.co.uk/pages/charity-take-over-how-it-works">September is another Charity Take Over month - and there's a <strong>THEME!</strong> Click here to find out more.</a></p>
         </div>
 
     </div><!-- #header_content end -->
@@ -168,17 +168,17 @@
           <h3>Last Month's Winner</h3>
 
             <div class="medium_thumb clearfix">
-              <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/pourquoi" title="link to Joshua K. Marshall's tee in the TeeZilla store">
+              <a href="http://teezilla.co.uk/collections/all-tshirts/products/pourquoi" title="link to Joshua K. Marshall's tee in the TeeZilla store">
                 <img src="{{asset_url}}/images/winner_july12.png" alt="Pourquoi" />
               </a>
               <p>
-                <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/pourquoi" title="link to Joshua K. Marshall's tee in the TeeZilla store" class="title_of_tee">
+                <a href="http://teezilla.co.uk/collections/all-tshirts/products/pourquoi" title="link to Joshua K. Marshall's tee in the TeeZilla store" class="title_of_tee">
                   Pourquoi
                 </a>
                 <span class="name_of_designer">by Joshua K. Marshall</span>
                 <span class="price">£19.99</span>
               </p>
-              <a href="http://teezilla.myshopify.com/collections/all-tshirts/products/pourquoi" title="link to buy Joshua K. Marshall's tee in the TeeZilla store" class="grey_button">
+              <a href="http://teezilla.co.uk/collections/all-tshirts/products/pourquoi" title="link to buy Joshua K. Marshall's tee in the TeeZilla store" class="grey_button">
                 Buy Tee
               </a>
 
