--- a/ideas/new.html.liquid
+++ b/ideas/new.html.liquid
@@ -47,7 +47,7 @@
 			
 			<div class="input clearfix">
 			    <input type="hidden" id="idea_custom3" name="idea[custom3]" value="2" />
-				<input type="submit" value="Submit your design" class="big_red_button" />
+				<input type="submit" value="Submit your design" class="big_red_button" name="form[submit]" />
 			</div>
 			
 		</div><!-- end .form_left_col -->
