--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -389,11 +389,12 @@ a#main_logo, a#main_logo:visited {
 
 #main_arrow {
   position: absolute;
-  bottom: 36px;
+  bottom: -90px;
   left: -55px;
   background: url('../images/main_arrow.png') top left no-repeat;
   width: 68px;
   height: 167px;
+  z-index: 99;
 }
 
 ul#main_nav {
