updated winner for August

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -90,12 +90,12 @@
           {% if current_user %}
             <a href="/ideas/new" title="add a new entry" class="simple_login">
               <span class="submit-text">Submit</span>
-              <span class="teaser-text">your design and win £200.00</span>
+              <span class="teaser-text">your design</span>
             </a>
           {% else %}
             <a id="inline" href="#lightbox-sign-in" class="simple_login">
             <span class="submit-text">Submit</span>
-            <span class="teaser-text">Your design and win £200.00</span>
+            <span class="teaser-text">Your design</span>
             </a>
           {% endif %}
         </li>
@@ -156,17 +156,17 @@
           <h3>Last Month's Winner</h3>
 
             <div class="medium_thumb clearfix">
-              <a href="http://teezilla.co.uk/collections/all-tshirts/products/pourquoi" title="link to Joshua K. Marshall's tee in the TeeZilla store">
-                <img src="{{asset_url}}/images/winner_july12.png" alt="Pourquoi" />
+              <a href="http://teezilla.co.uk/products/beastie-boys" title="link to Joshua K. Marshall's tee in the TeeZilla store">
+                <img src="{{asset_url}}/images/winner_august12.png" alt="Beastie Boys" />
               </a>
               <p>
-                <a href="http://teezilla.co.uk/collections/all-tshirts/products/pourquoi" title="link to Joshua K. Marshall's tee in the TeeZilla store" class="title_of_tee">
-                  Pourquoi
+                <a href="http://teezilla.co.uk/products/beastie-boys" title="link to Joshua K. Marshall's tee in the TeeZilla store" class="title_of_tee">
+                  Beastie Boys
                 </a>
                 <span class="name_of_designer">by Joshua K. Marshall</span>
                 <span class="price">£19.99</span>
               </p>
-              <a href="http://teezilla.co.uk/collections/all-tshirts/products/pourquoi" title="link to buy Joshua K. Marshall's tee in the TeeZilla store" class="grey_button">
+              <a href="http://teezilla.co.uk/products/beastie-boys" title="link to buy Joshua K. Marshall's tee in the TeeZilla store" class="grey_button">
                 Buy Tee
               </a>
 
